tests/spec/fail/named_arg_missing_required.aja
fuc add(a: int, b: int = 2) -> int:
    return a + b

print(add())
